fix: fix git action yaml

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -46,8 +46,8 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t ${{ env.DOCKERHUB_USERNAME }}/users:latest .
+          docker build -t ${{ env.DOCKERHUB_USERNAME }}/reviews:latest .
 
 
       - name: Publish Docker Image
-        run: docker push ${{ env.DOCKERHUB_USERNAME }}/users:latest
+        run: docker push ${{ env.DOCKERHUB_USERNAME }}/reviews:latest
