feat: adds nottifiaction to review service, small fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,12 @@ server.port=8084
 
 eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 
+spring.kafka.producer.bootstrap-servers: ${KAFKA_HOST:localhost:29092}
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.bookingaccomodation.model.dto.NotificationDTO
+
+
 spring.application.name = reviews-service
 management.endpoints.web.exposure.include=prometheus
 management.tracing.sampling.probability=1.0
