--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 			<groupId>io.github.openfeign</groupId>
 			<artifactId>feign-micrometer</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.0.10</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
