fix: model path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eurek
 spring.kafka.producer.bootstrap-servers: ${KAFKA_HOST:localhost:29092}
 spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.producer.properties.spring.json.type.mapping=event:com.bookingaccomodation.model.dto.NotificationDTO
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.bookingreviews.model.dto.NotificationDTO
 
 
 spring.application.name = reviews-service
